ops/2-tf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tf-python
spec:
    replicas: 3
    selector:
        matchLabels:
            app: tf-python
    template:
        metadata:
            labels:
                app: tf-python
        spec:
            containers:
            - name: tf-python
              image: pbhorjee/tf-python:latest
              ports:
                - containerPort: 8080
