ops/4-tf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tf-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: "letsencrypt"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
   - host: www.bhorjee.com
     http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tf-python
              port:
                name: http
   - host: bhorjee.com
     http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tf-python
                port:
                  name: http
